[package]
name = "diy"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
authors = ["Willy Micieli"]
repository = "https://github.com/taishingi/diy"
readme = "README.md"
description = "Do it Yourself"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
